--- a/index.htm
+++ b/index.htm
@@ -844,7 +844,7 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,53,128,.6) !importan
 <li><i class='fa fa-phone fa-fw' style='font-size: 16px'></i> ПН—ПТ 10:00—20:00</li>
 <li> СБ-ВС 11:00—17:00 </li>
 <p>
-<i class='fa fa-envelope-o' style='font-size: 16px'></i> <a href='mailto:zakaz@cinemadslrshop.ru'>zakaz@cinemadslrshop.ru</a>
+<i class='fa fa-envelope-o' style='font-size: 16px'></i> <a href='mailto:foto@tov.ru'>foto@tov.ru</a>
 
 
 
@@ -1233,7 +1233,7 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(0,53,128,.6) !importan
 <li><i class='fa fa-phone fa-fw' style='font-size: 16px'></i> ПН—ПТ 10:00—20:00</li>
 <li> СБ-ВС 11:00—17:00 </li>
 <p>
-<i class='fa fa-envelope-o' style='font-size: 16px'></i> <a href='mailto:zakaz@cinemadslrshop.ru'>zakaz@cinemadslrshop.ru</a>
+<i class='fa fa-envelope-o' style='font-size: 16px'></i> <a href='mailto:foto@tov.ru'>foto@tov.ru</a>
 
 
 
@@ -8891,7 +8891,7 @@ $(document).ready(function(){
 <li><i class='fa fa-map-o fa-fw' style='font-size: 16px'></i> <a href='kontakt/index.htm'>Схема проезда</a></li>
 <li><i class='fa fa-phone fa-fw' style='font-size: 16px'></i> ПН—ПТ 10:00—20:00</li>
 <li> СБ-ВС 11:00—17:00 </li>
-<i class='fa fa-envelope-o' style='font-size: 16px'></i> <a href='mailto:zakaz@cinemadslrshop.ru'>zakaz@cinemadslrshop.ru</a>
+<i class='fa fa-envelope-o' style='font-size: 16px'></i> <a href='mailto:foto@tov.ru'>foto@tov.ru</a>
 
 
 
